--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Sketch Playground</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="load.jsx"></script>
-  </body>
+
+<head>
+  <title>Sketch Playground</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="stylesheet" href="index.css" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="load.jsx"></script>
+</body>
+
 </html>
